--- a/anatomy-slider.html
+++ b/anatomy-slider.html
@@ -39,11 +39,51 @@
 					<span data-hover="Contact">Contact</span>
 				</a>
 			</div>
+			<div class="desktop-nav">
+				<a class="nav-link anim-destination" href="contact.html">
+					<span data-hover="Contact">Contact</span>
+				</a>
+				<a class="nav-link anim-destination" href="about.html">
+					<span data-hover="About">About</span>
+				</a>
+				<a class="nav-link anim-destination" href="work.html">
+					<span data-hover="Work">Work</span>
+				</a>
+				<a class="nav-link anim-destination" href="index.html">
+					<span data-hover="Home">Home</span>
+				</a>
+			</div>
+			<div class="project-nav">
+				<a class="nav-link anim-destination" href="giphy-battle.html">
+					<span data-hover="Giphy Battle">Giphy Battle</span>
+				</a>
+				<a class="nav-link anim-destination" href="anatomy-slider.html">
+					<span data-hover="Anatomy Slider App">Anatomy Slider App</span>
+				</a>
+				<a class="nav-link anim-destination" href="cheesemonger.html">
+					<span data-hover="Cheesemonger Box">Cheesemonger Box</span>
+				</a>
+				<a class="nav-link anim-destination" href="mercedes-benz.html">
+					<span data-hover="Mercedes Benz">Mercedes Benz</span>
+				</a>
+				<a class="nav-link anim-destination" href="daily-digits.html">
+					<span data-hover="Daily Digit">Daily Digits</span>
+				</a>
+				<a class="nav-link anim-destination" href="red-socks.html">
+					<span data-hover="Red Socks">Red Socks</span>
+				</a>
+				<a class="nav-link anim-destination" href="stranger-things.html">
+					<span data-hover="Stranger Things">Stranger Things</span>
+				</a>
+				<a class="nav-link anim-destination" href="marta-redesign.html">
+					<span data-hover="MARTA Redesign">MARTA Redesign</span>
+				</a>
+			</div>
 		</div>
 
 		<div class="square-content work-content work-piece">
 			<div class="overlay">
-				<div class="portfolio-piece daily-digits">
+				<div class="portfolio-piece anatomy-slider">
 					<a href="#">
 						<span>Anatomy Slider App</span>
 					</a>
@@ -52,13 +92,15 @@
 					<div class="text">
 						<h2 class="text-title">Anatomy Slider App</h2>
 						<p class="text-description">A touch screen application for children between two and seven years. The application is to be deployed in pediatrician’s waiting rooms to help teach young children the anatomical structure of the body including bones, organs and muscles.</p>
-						<div class="text-technology">Technology used:
+						<div class="text-technology">
+							<h2>Technology used:</h2>
 							<ul class="technology-array">
 								<li>Responsive CSS</li>
 								<li>Vanilla JS</li>
+								<li>Masonry.js</li>
 								<li>Greensock TweenMax</li>
-								<li>Greensock Draggable</li>
-							</ul> 
+								<li>Greensock MorphSVG</li>
+							</ul>
 						</div>
 						<a class="link text-link anim-destination" href="#"><span data-hover="Let's go!">Visit Site</span></a>
 					</div>
