--- a/cheesemonger.html
+++ b/cheesemonger.html
@@ -39,6 +39,46 @@
 					<span data-hover="Contact">Contact</span>
 				</a>
 			</div>
+			<div class="desktop-nav">
+				<a class="nav-link anim-destination" href="contact.html">
+					<span data-hover="Contact">Contact</span>
+				</a>
+				<a class="nav-link anim-destination" href="about.html">
+					<span data-hover="About">About</span>
+				</a>
+				<a class="nav-link anim-destination" href="work.html">
+					<span data-hover="Work">Work</span>
+				</a>
+				<a class="nav-link anim-destination" href="index.html">
+					<span data-hover="Home">Home</span>
+				</a>
+			</div>
+			<div class="project-nav">
+				<a class="nav-link anim-destination" href="giphy-battle.html">
+					<span data-hover="Giphy Battle">Giphy Battle</span>
+				</a>
+				<a class="nav-link anim-destination" href="anatomy-slider.html">
+					<span data-hover="Anatomy Slider App">Anatomy Slider App</span>
+				</a>
+				<a class="nav-link anim-destination" href="cheesemonger.html">
+					<span data-hover="Cheesemonger Box">Cheesemonger Box</span>
+				</a>
+				<a class="nav-link anim-destination" href="mercedes-benz.html">
+					<span data-hover="Mercedes Benz">Mercedes Benz</span>
+				</a>
+				<a class="nav-link anim-destination" href="daily-digits.html">
+					<span data-hover="Daily Digit">Daily Digits</span>
+				</a>
+				<a class="nav-link anim-destination" href="red-socks.html">
+					<span data-hover="Red Socks">Red Socks</span>
+				</a>
+				<a class="nav-link anim-destination" href="stranger-things.html">
+					<span data-hover="Stranger Things">Stranger Things</span>
+				</a>
+				<a class="nav-link anim-destination" href="marta-redesign.html">
+					<span data-hover="MARTA Redesign">MARTA Redesign</span>
+				</a>
+			</div>
 		</div>
 
 		<div class="square-content work-content work-piece">
@@ -52,7 +92,8 @@
 					<div class="text">
 						<h2 class="text-title">Cheesemonger Box Website</h2>
 						<p class="text-description">A fun game called “Match-a-Rella” accompanying the “Cheesemonger Box” brand. Cheesemonger Box is a subscription box service that curates small batch artisan and traditional cheeses and delivers them to your door. The game is part of a special promotion and results in a one time free Cheesemonger Box.</p>
-						<div class="text-technology">Technology used:
+						<div class="text-technology">
+							<h2>Technology used:</h2>
 							<ul class="technology-array">
 								<li>Responsive CSS</li>
 								<li>Vanilla JS</li>
