--- a/daily-digits.html
+++ b/daily-digits.html
@@ -39,6 +39,46 @@
 					<span data-hover="Contact">Contact</span>
 				</a>
 			</div>
+			<div class="desktop-nav">
+				<a class="nav-link anim-destination" href="contact.html">
+					<span data-hover="Contact">Contact</span>
+				</a>
+				<a class="nav-link anim-destination" href="about.html">
+					<span data-hover="About">About</span>
+				</a>
+				<a class="nav-link anim-destination" href="work.html">
+					<span data-hover="Work">Work</span>
+				</a>
+				<a class="nav-link anim-destination" href="index.html">
+					<span data-hover="Home">Home</span>
+				</a>
+			</div>
+			<div class="project-nav">
+				<a class="nav-link anim-destination" href="giphy-battle.html">
+					<span data-hover="Giphy Battle">Giphy Battle</span>
+				</a>
+				<a class="nav-link anim-destination" href="anatomy-slider.html">
+					<span data-hover="Anatomy Slider App">Anatomy Slider App</span>
+				</a>
+				<a class="nav-link anim-destination" href="cheesemonger.html">
+					<span data-hover="Cheesemonger Box">Cheesemonger Box</span>
+				</a>
+				<a class="nav-link anim-destination" href="mercedes-benz.html">
+					<span data-hover="Mercedes Benz">Mercedes Benz</span>
+				</a>
+				<a class="nav-link anim-destination" href="daily-digits.html">
+					<span data-hover="Daily Digit">Daily Digits</span>
+				</a>
+				<a class="nav-link anim-destination" href="red-socks.html">
+					<span data-hover="Red Socks">Red Socks</span>
+				</a>
+				<a class="nav-link anim-destination" href="stranger-things.html">
+					<span data-hover="Stranger Things">Stranger Things</span>
+				</a>
+				<a class="nav-link anim-destination" href="marta-redesign.html">
+					<span data-hover="MARTA Redesign">MARTA Redesign</span>
+				</a>
+			</div>
 		</div>
 
 		<div class="square-content work-content work-piece">
@@ -50,16 +90,17 @@
 				</div>
 				<div class="overlay-text">
 					<div class="text">
-						<h2 class="text-title">Daily Digits Website</h2>
+						<h2 class="text-title">Daily Digits Website Website</h2>
 						<p class="text-description">An objective news website with five curated news “digits” per day, paired with statistics, animations and further details.</p>
-						<div class="text-technology">Technology used:
+						<div class="text-technology">
+							<h2>Technology used:</h2>
 							<ul class="technology-array">
 								<li>Responsive CSS</li>
 								<li>Vanilla JS</li>
 								<li>Masonry.js</li>
 								<li>Greensock TweenMax</li>
 								<li>Greensock MorphSVG</li>
-							</ul> 
+							</ul>
 						</div>
 						<a class="link text-link anim-destination" href="#"><span data-hover="Let's go!">Visit Site</span></a>
 					</div>
