--- a/giphy-battle.html
+++ b/giphy-battle.html
@@ -24,7 +24,7 @@
 			<div class="hamburger-menu">
 				  <div class="bar"></div>	
 			</div>
-			<div class="square-name contact-name">&lt; Contact /&gt;</div>
+			<div class="portfolio-piece-name">&lt; Giphy Battle App /&gt;</div>
 			<div class="nav">
 				<a class="nav-link anim-destination" href="index.html">
 					<span data-hover="Home">Home</span>
@@ -81,31 +81,29 @@
 			</div>
 		</div>
 
-		<div class="square-content contact-content contact-square">
-
-			<h2 class="call-to-action">Have a question or want to work together? Let's make it happen!</h2>
-			<form action="form_to_email.php" method="post" class="contact-form" name="contact-form">
-				<input type="text" name="honeypot">
-				<div class="name-email">
-					<div class="label name-label">
-	  			        <label for="name">Name</label>
-	  			        <input type="text" id="name" name="user_name" placeholder="Your Name">
-	  			    </div>
-	  			    <div class="label email-label">
-	  			        <label for="mail">E-Mail</label>
-	  			        <input type="email" id="mail" name="user_email" placeholder="Enter E-Mail">
-	  			    </div>
+		<div class="square-content work-content work-piece">
+			<div class="overlay">
+				<div class="portfolio-piece giphy-battle">
+					<a href="#">
+						<span>Giphy Battle App</span>
+					</a>
 				</div>
-  			    <div class="label message-label">
-  			        <label for="msg">Message</label>
-  			        <textarea id="msg" name="user_message" placeholder="Your Message"></textarea>
-  			    </div>
-  			    <button class="form-button anim-destination" href="index.html" onclick="clearInputFields();">
-  			    	<span data-hover="Send">Send</span>
-  			    </button>
-  			    <h3 class="thank-you-php">Thank you for reaching out. I'll be in touch soon!</h3>
-			</form>
-
+				<div class="overlay-text">
+					<div class="text">
+						<h2 class="text-title">Giphy Battle App</h2>
+						<p class="text-description">A fun web application, built with the Vue.js command-line-interface. The app is connected to the GIPHY API and allows the users to search for GIPHYS based on the specific hashtag which is updated every two minutes.</p>
+						<div class="text-technology">
+							<h2>Technology used:</h2>
+							<ul class="technology-array">
+								<li>Responsive CSS</li>
+								<li>Vue.js CLI</li>
+								<li>Materialize</li>
+							</ul>
+						</div>
+						<a class="link text-link anim-destination" href="#"><span data-hover="Let's go!">Visit Site</span></a>
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<footer>
@@ -122,8 +120,6 @@
 		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
-		<script src="src/js/contact-form.js"></script>
 		<!-- <script src="dist/js/main.js"></script> -->
 		<script src="src/js/app.js"></script>
 
