--- a/work.html
+++ b/work.html
@@ -40,17 +40,43 @@
 				</a>
 			</div>
 			<div class="desktop-nav">
-				<a class="nav-link anim-destination" href="index.html">
-					<span data-hover="Home">Home</span>
-				</a>
-				<a class="nav-link anim-destination" href="work.html">
-					<span data-hover="Work">Work</span>
+				<a class="nav-link anim-destination" href="contact.html">
+					<span data-hover="Contact">Contact</span>
 				</a>
 				<a class="nav-link anim-destination" href="about.html">
 					<span data-hover="About">About</span>
 				</a>
-				<a class="nav-link anim-destination" href="contact.html">
-					<span data-hover="Contact">Contact</span>
+				<a class="nav-link work-link anim-destination" href="work.html">
+					<span data-hover="&lt; Work">&lt; Work</span>
+				</a>
+				<a class="nav-link anim-destination" href="index.html">
+					<span data-hover="Home">Home</span>
+				</a>
+			</div>
+			<div class="project-nav">
+				<a class="nav-link anim-destination" href="giphy-battle.html">
+					<span data-hover="Giphy Battle">Giphy Battle</span>
+				</a>
+				<a class="nav-link anim-destination" href="anatomy-slider.html">
+					<span data-hover="Anatomy Slider App">Anatomy Slider App</span>
+				</a>
+				<a class="nav-link anim-destination" href="cheesemonger.html">
+					<span data-hover="Cheesemonger Box">Cheesemonger Box</span>
+				</a>
+				<a class="nav-link anim-destination" href="mercedes-benz.html">
+					<span data-hover="Mercedes Benz">Mercedes Benz</span>
+				</a>
+				<a class="nav-link anim-destination" href="daily-digits.html">
+					<span data-hover="Daily Digit">Daily Digits</span>
+				</a>
+				<a class="nav-link anim-destination" href="red-socks.html">
+					<span data-hover="Red Socks">Red Socks</span>
+				</a>
+				<a class="nav-link anim-destination" href="stranger-things.html">
+					<span data-hover="Stranger Things">Stranger Things</span>
+				</a>
+				<a class="nav-link anim-destination" href="marta-redesign.html">
+					<span data-hover="MARTA Redesign">MARTA Redesign</span>
 				</a>
 			</div>
 		</div>
@@ -103,15 +129,9 @@
 
 				<div class="thumb marta-redesign">
 					<a href="marta-redesign.html">
-						<span>MARTA Re-Design</span>
+						<span>MARTA Redesign</span>
 					</a>
 				</div>
-
-<!-- 				<div class="thumb">
-					<a href="#">
-						<span>1stdibs Furniture Experience</span>
-					</a>
-				</div> -->
 			</div>
 		</div>
 
