So many updates.

--- a/daily-digits.html
+++ b/daily-digits.html
@@ -102,7 +102,7 @@
 								<li>Greensock MorphSVG</li>
 							</ul>
 						</div>
-						<a class="link text-link anim-destination" href="#"><span data-hover="Let's go!">Visit Site</span></a>
+						<a class="link text-link anim-destination" target="_blank" href="http://www.webdevshelly.com/projects/daily-digits/index.html"><span data-hover="Let's go!">Visit Site</span></a>
 					</div>
 				</div>
 			</div>
