--- a/giphy-battle.html
+++ b/giphy-battle.html
@@ -100,7 +100,7 @@
 								<li>Materialize</li>
 							</ul>
 						</div>
-						<a class="link text-link anim-destination" href="#"><span data-hover="Let's go!">Visit Site</span></a>
+						<a class="link text-link anim-destination" target="_blank" href="http://www.webdevshelly.com/projects/giphy-battle"><span data-hover="Let's go!">Visit Site</span></a>
 					</div>
 				</div>
 			</div>
