--- a/marta-redesign.html
+++ b/marta-redesign.html
@@ -98,7 +98,7 @@
 								<li>Adobe XD</li>
 							</ul>
 						</div>
-						<a class="link text-link anim-destination" href="#"><span data-hover="Let's go!">Visit Site</span></a>
+						<a class="link text-link anim-destination" target="_blank" href="https://xd.adobe.com/view/0567296f-46a3-4a70-aa4e-3fd297e28919?fullscreen"><span data-hover="Let's go!">Visit Site</span></a>
 					</div>
 				</div>
 			</div>
