--- a/red-socks.html
+++ b/red-socks.html
@@ -75,7 +75,7 @@
 								<li>AJAX</li>
 							</ul>
 						</div>
-						<a class="link text-link anim-destination" href="#"><span data-hover="Let's go!">Visit Site</span></a>
+						<a class="link text-link anim-destination" target="_blank" href="http://www.webdevshelly.com/projects/red-socks/index.html"><span data-hover="Let's go!">Visit Site</span></a>
 					</div>
 				</div>
 			</div>
