--- a/stranger-things.html
+++ b/stranger-things.html
@@ -71,7 +71,7 @@
 			<div class="overlay">
 				<div class="portfolio-piece stranger-things">
 					<a href="#">
-						<span>BStranger Things Website</span>
+						<span>Stranger Things Website</span>
 					</a>
 				</div>
 				<div class="overlay-text">
@@ -87,7 +87,7 @@
 								<li>jQuery</li>
 							</ul>
 						</div>
-						<a class="link text-link anim-destination" href="#"><span data-hover="Let's go!">Visit Site</span></a>
+						<a class="link text-link anim-destination" target="_blank" href="http://www.webdevshelly.com/projects/stranger-things/index.html"><span data-hover="Let's go!">Visit Site</span></a>
 					</div>
 				</div>
 			</div>
