Updated About me and credited Designer.

--- a/anatomy-slider.html
+++ b/anatomy-slider.html
@@ -92,6 +92,7 @@
 					<div class="text">
 						<h2 class="text-title">Anatomy Slider App</h2>
 						<p class="text-description">A touch screen application for children between two and seven years. The application is to be deployed in pediatrician’s waiting rooms to help teach young children the anatomical structure of the body including bones, organs and muscles.</p>
+						<p class="copyright-designer">Designed by <a href="http://www.jerrizhang.com/" target="_blank" class="credit">Jerri Zhang</a></p>
 						<div class="text-technology">
 							<h2>Technology used:</h2>
 							<ul class="technology-array">
@@ -115,7 +116,7 @@
 				<a href="http://www.github.com/michellejames" class="icon"><i class="fab fa-github"></i></a>
 				<a href="https://www.linkedin.com/in/webdevshelly/" class="icon"><i class="fab fa-linkedin"></i></a>
 			</div>
-			<div class="copyright">Copyright &copy; 2018 | Michelle James</div>
+			<div class="copyright">Copyright &copy; 2018 | Developed by <span>Michelle James</span> | Designed by <a href="http://www.whitneyoni.com/" target="_blank" class="credit">Whitney Oni</a></div>
 		</footer>
 
 	
