--- a/furniture-world.html
+++ b/furniture-world.html
@@ -24,7 +24,7 @@
 			<div class="hamburger-menu">
 				  <div class="bar"></div>	
 			</div>
-			<div class="portfolio-piece-name">&lt; Daily Digits Website /&gt;</div>
+			<div class="portfolio-piece-name">&lt; Furniture World Experience /&gt;</div>
 			<div class="nav">
 				<a class="nav-link anim-destination" href="index.html">
 					<span data-hover="Home">Home</span>
@@ -37,20 +37,6 @@
 				</a>
 				<a class="nav-link anim-destination" href="contact.html">
 					<span data-hover="Contact">Contact</span>
-				</a>
-			</div>
-			<div class="desktop-nav">
-				<a class="nav-link anim-destination" href="contact.html">
-					<span data-hover="Contact">Contact</span>
-				</a>
-				<a class="nav-link anim-destination" href="about.html">
-					<span data-hover="About">About</span>
-				</a>
-				<a class="nav-link anim-destination" href="work.html">
-					<span data-hover="Work">Work</span>
-				</a>
-				<a class="nav-link anim-destination" href="index.html">
-					<span data-hover="Home">Home</span>
 				</a>
 			</div>
 			<div class="project-nav">
@@ -83,26 +69,27 @@
 
 		<div class="square-content work-content work-piece">
 			<div class="overlay">
-				<div class="portfolio-piece daily-digits">
+				<div class="portfolio-piece furniture-world">
 					<a href="#">
-						<span>Daily Digits Website</span>
+						<span>Furniture World Experience</span>
 					</a>
 				</div>
 				<div class="overlay-text">
 					<div class="text">
-						<h2 class="text-title">Daily Digits Website Website</h2>
-						<p class="text-description">An objective news website with five curated news “digits” per day, paired with statistics, animations and further details.</p>
+						<h2 class="text-title">Furniture World Experience</h2>
+						<p class="text-description">A curated furniture collection, including 10 furniture pieces sold on www.1stdibs.com. The look of the furniture pieces resemble animals and are therefore displayed in a “living-breathing room”.</p>
 						<div class="text-technology">
 							<h2>Technology used:</h2>
 							<ul class="technology-array">
-								<li>Responsive CSS</li>
+								<li>Responsive CSS with 3D Effects</li>
 								<li>Vanilla JS</li>
-								<li>Masonry.js</li>
+								<li>Custome Carousel</li>
 								<li>Greensock TweenMax</li>
-								<li>Greensock MorphSVG</li>
+								<li>Greensock ScrollTo</li>
+								<li>Hammer JS</li>
 							</ul>
 						</div>
-						<a class="link text-link anim-destination" target="_blank" href="http://www.webdevshelly.com/projects/daily-digits/index.html"><span data-hover="Let's go!">Visit Site</span></a>
+						<a class="link text-link anim-destination" target="_blank" href="http://www.webdevshelly.com/projects/furniture-world/index.html"><span data-hover="Let's go!">Visit Site</span></a>
 					</div>
 				</div>
 			</div>
