--- a/giphy-battle.html
+++ b/giphy-battle.html
@@ -113,7 +113,7 @@
 				<a href="http://www.github.com/michellejames" class="icon"><i class="fab fa-github"></i></a>
 				<a href="https://www.linkedin.com/in/webdevshelly/" class="icon"><i class="fab fa-linkedin"></i></a>
 			</div>
-			<div class="copyright">Copyright &copy; 2018 | Michelle James</div>
+			<div class="copyright">Copyright &copy; 2018 | Developed by <span>Michelle James</span> | Designed by <a href="http://www.whitneyoni.com/" target="_blank" class="credit">Whitney Oni</a></div>
 		</footer>
 
 	
