--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
 			</div>
 
 			<div class="resume">
-				<h2>Download my resume here: <a href="dist/resume/MichelleJames_Resume.pdf" download><i class="fas fa-file-alt"></i></a></h2>
+				<h2>Download my resume: <a href="dist/resume/MichelleJames_Resume.pdf" download><i class="fas fa-file-alt"></i></a></h2>
 			</div>
 		</div>
 
@@ -116,7 +116,7 @@
 				<a href="http://www.github.com/michellejames" class="icon"><i class="fab fa-github"></i></a>
 				<a href="https://www.linkedin.com/in/webdevshelly/" class="icon"><i class="fab fa-linkedin"></i></a>
 			</div>
-			<div class="copyright">Copyright &copy; 2018 | Michelle James</div>
+			<div class="copyright">Copyright &copy; 2018 | Developed by <span>Michelle James</span> | Designed by <a href="http://www.whitneyoni.com/" target="_blank" class="credit">Whitney Oni</a></div>
 		</footer>
 
 	
