--- a/mercedes-benz.html
+++ b/mercedes-benz.html
@@ -102,7 +102,7 @@
 								<li>Waypoints.js</li>
 							</ul> 
 						</div>
-						<a class="link text-link anim-destination" target="_blank" href="http://www.webdevshelly.com/projects/mercedes-benz/index.html"><span data-hover="Let's go!">Visit Site</span></a>
+						<a class="link text-link anim-destination" target="_blank" href="http://www.webdevshelly.com/projects/mercedez-benz/index.html"><span data-hover="Let's go!">Visit Site</span></a>
 					</div>
 				</div>
 			</div>
@@ -115,7 +115,7 @@
 				<a href="http://www.github.com/michellejames" class="icon"><i class="fab fa-github"></i></a>
 				<a href="https://www.linkedin.com/in/webdevshelly/" class="icon"><i class="fab fa-linkedin"></i></a>
 			</div>
-			<div class="copyright">Copyright &copy; 2018 | Michelle James</div>
+			<div class="copyright">Copyright &copy; 2018 | Developed by <span>Michelle James</span> | Designed by <a href="http://www.whitneyoni.com/" target="_blank" class="credit">Whitney Oni</a></div>
 		</footer>
 
 	
