Updated Readme & JSON file

--- a/anatomy-slider.html
+++ b/anatomy-slider.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<title></title>
-		<meta name="description" content="">
+		<meta name="description" content="A touch screen application for children between two and seven years. The application is to be deployed in pediatrician’s waiting rooms to help teach young children the anatomical structure of the body including bones, organs and muscles.">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- <link rel="stylesheet" href="dist/css/reset.css">
@@ -61,7 +61,7 @@
 					<span data-hover="Anatomy Slider App">Anatomy Slider App</span>
 				</a>
 				<a class="nav-link anim-destination" href="cheesemonger.html">
-					<span data-hover="Cheesemonger Box">Cheesemonger Box</span>
+					<span data-hover="Cheesemonger Box">Cheesemonger Box Game</span>
 				</a>
 				<a class="nav-link anim-destination" href="mercedes-benz.html">
 					<span data-hover="Mercedes Benz">Mercedes Benz</span>
