--- a/cheesemonger.html
+++ b/cheesemonger.html
@@ -24,7 +24,7 @@
 			<div class="hamburger-menu">
 				  <div class="bar"></div>	
 			</div>
-			<div class="portfolio-piece-name">&lt; Cheesemonger Box Website /&gt;</div>
+			<div class="portfolio-piece-name">&lt; Cheesemonger Box Game /&gt;</div>
 			<div class="nav">
 				<a class="nav-link anim-destination" href="index.html">
 					<span data-hover="Home">Home</span>
@@ -61,7 +61,7 @@
 					<span data-hover="Anatomy Slider App">Anatomy Slider App</span>
 				</a>
 				<a class="nav-link anim-destination" href="cheesemonger.html">
-					<span data-hover="Cheesemonger Box">Cheesemonger Box</span>
+					<span data-hover="Cheesemonger Box">Cheesemonger Box Game</span>
 				</a>
 				<a class="nav-link anim-destination" href="mercedes-benz.html">
 					<span data-hover="Mercedes Benz">Mercedes Benz</span>
@@ -85,12 +85,12 @@
 			<div class="overlay">
 				<div class="portfolio-piece cheesemonger">
 					<a href="#">
-						<span>Cheesemonger Box Website</span>
+						<span>Cheesemonger Box Game</span>
 					</a>
 				</div>
 				<div class="overlay-text">
 					<div class="text">
-						<h2 class="text-title">Cheesemonger Box Website</h2>
+						<h2 class="text-title">Cheesemonger Box Game</h2>
 						<p class="text-description">A fun game called “Match-a-Rella” accompanying the “Cheesemonger Box” brand. Cheesemonger Box is a subscription box service that curates small batch artisan and traditional cheeses and delivers them to your door. The game is part of a special promotion and results in a one time free Cheesemonger Box.</p>
 						<div class="text-technology">
 							<h2>Technology used:</h2>
