--- a/furniture-world.html
+++ b/furniture-world.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<title></title>
-		<meta name="description" content="">
+		<meta name="description" content="A curated furniture collection, including 10 furniture pieces sold on www.1stdibs.com. The look of the furniture pieces resemble animals and are therefore displayed in a “living-breathing room”.">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- <link rel="stylesheet" href="dist/css/reset.css">
@@ -47,7 +47,7 @@
 					<span data-hover="Anatomy Slider App">Anatomy Slider App</span>
 				</a>
 				<a class="nav-link anim-destination" href="cheesemonger.html">
-					<span data-hover="Cheesemonger Box">Cheesemonger Box</span>
+					<span data-hover="Cheesemonger Box">Cheesemonger Box Game</span>
 				</a>
 				<a class="nav-link anim-destination" href="mercedes-benz.html">
 					<span data-hover="Mercedes Benz">Mercedes Benz</span>
