--- a/stranger-things.html
+++ b/stranger-things.html
@@ -47,7 +47,7 @@
 					<span data-hover="Anatomy Slider App">Anatomy Slider App</span>
 				</a>
 				<a class="nav-link anim-destination" href="cheesemonger.html">
-					<span data-hover="Cheesemonger Box">Cheesemonger Box</span>
+					<span data-hover="Cheesemonger Box">Cheesemonger Box Game</span>
 				</a>
 				<a class="nav-link anim-destination" href="mercedes-benz.html">
 					<span data-hover="Mercedes Benz">Mercedes Benz</span>
