--- a/work.html
+++ b/work.html
@@ -61,7 +61,7 @@
 					<span data-hover="Anatomy Slider App">Anatomy Slider App</span>
 				</a>
 				<a class="nav-link anim-destination" href="cheesemonger.html">
-					<span data-hover="Cheesemonger Box">Cheesemonger Box</span>
+					<span data-hover="Cheesemonger Box">Cheesemonger Box Game</span>
 				</a>
 				<a class="nav-link anim-destination" href="mercedes-benz.html">
 					<span data-hover="Mercedes Benz">Mercedes Benz</span>
@@ -132,6 +132,13 @@
 						<span>MARTA Redesign</span>
 					</a>
 				</div>
+
+				<div class="thumb marta-redesign">
+					<a href="furniture-world.html">
+						<span>Furniture World Experience</span>
+					</a>
+				</div>
+
 			</div>
 		</div>
 
