--- a/red-socks.html
+++ b/red-socks.html
@@ -53,6 +53,32 @@
 					<span data-hover="Home">Home</span>
 				</a>
 			</div>
+			<div class="project-nav">
+				<a class="nav-link anim-destination" href="giphy-battle.html">
+					<span data-hover="Giphy Battle">Giphy Battle</span>
+				</a>
+				<a class="nav-link anim-destination" href="anatomy-slider.html">
+					<span data-hover="Anatomy Slider App">Anatomy Slider App</span>
+				</a>
+				<a class="nav-link anim-destination" href="cheesemonger.html">
+					<span data-hover="Cheesemonger Box">Cheesemonger Box Game</span>
+				</a>
+				<a class="nav-link anim-destination" href="mercedes-benz.html">
+					<span data-hover="Mercedes Benz">Mercedes Benz</span>
+				</a>
+				<a class="nav-link anim-destination" href="daily-digits.html">
+					<span data-hover="Daily Digit">Daily Digits</span>
+				</a>
+				<a class="nav-link anim-destination" href="red-socks.html">
+					<span data-hover="Red Socks">Red Socks</span>
+				</a>
+				<a class="nav-link anim-destination" href="stranger-things.html">
+					<span data-hover="Stranger Things">Stranger Things</span>
+				</a>
+				<a class="nav-link anim-destination" href="marta-redesign.html">
+					<span data-hover="MARTA Redesign">MARTA Redesign</span>
+				</a>
+			</div>
 		</div>
 
 		<div class="square-content work-content work-piece">
