Added Furniture Project to Portfolio

--- a/furniture-world.html
+++ b/furniture-world.html
@@ -39,6 +39,20 @@
 					<span data-hover="Contact">Contact</span>
 				</a>
 			</div>
+			<div class="desktop-nav">
+				<a class="nav-link anim-destination" href="contact.html">
+					<span data-hover="Contact">Contact</span>
+				</a>
+				<a class="nav-link anim-destination" href="about.html">
+					<span data-hover="About">About</span>
+				</a>
+				<a class="nav-link anim-destination" href="work.html">
+					<span data-hover="Work">Work</span>
+				</a>
+				<a class="nav-link anim-destination" href="index.html">
+					<span data-hover="Home">Home</span>
+				</a>
+			</div>
 			<div class="project-nav">
 				<a class="nav-link anim-destination" href="giphy-battle.html">
 					<span data-hover="Giphy Battle">Giphy Battle</span>
@@ -63,6 +77,9 @@
 				</a>
 				<a class="nav-link anim-destination" href="marta-redesign.html">
 					<span data-hover="MARTA Redesign">MARTA Redesign</span>
+				</a>
+				<a class="nav-link anim-destination" href="furniture-world.html">
+					<span data-hover="Furniture World">Furniture World</span>
 				</a>
 			</div>
 		</div>
