--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
 				<a class="nav-link anim-destination" href="marta-redesign.html">
 					<span data-hover="MARTA Redesign">MARTA Redesign</span>
 				</a>
+				<a class="nav-link anim-destination" href="furniture-world.html">
+					<span data-hover="Furniture World">Furniture World</span>
+				</a>
 			</div>
 		</div>
 
