--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
 					<span data-hover="About">About</span>
 				</a>
 				<a class="nav-link work-link anim-destination" href="work.html">
-					<span data-hover="&lt; Work">&lt; Work</span>
+					<span data-hover="Work">Work</span>
 				</a>
 				<a class="nav-link anim-destination" href="index.html">
 					<span data-hover="Home">Home</span>
@@ -77,6 +77,9 @@
 				</a>
 				<a class="nav-link anim-destination" href="marta-redesign.html">
 					<span data-hover="MARTA Redesign">MARTA Redesign</span>
+				</a>
+				<a class="nav-link anim-destination" href="furniture-world.html">
+					<span data-hover="Furniture World">Furniture World</span>
 				</a>
 			</div>
 		</div>
@@ -133,7 +136,7 @@
 					</a>
 				</div>
 
-				<div class="thumb marta-redesign">
+				<div class="thumb furniture-world">
 					<a href="furniture-world.html">
 						<span>Furniture World Experience</span>
 					</a>
