--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="dist/css/main.css"> -->
 		<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i" rel="stylesheet">
-		<link rel="stylesheet" href="dist/css/app.css">
+		<link rel="stylesheet" href="dist/css/main.css">
 	</head>
 	<body>
 
@@ -152,7 +152,7 @@
 				<a href="http://www.github.com/michellejames" class="icon"><i class="fab fa-github"></i></a>
 				<a href="https://www.linkedin.com/in/webdevshelly/" class="icon"><i class="fab fa-linkedin"></i></a>
 			</div>
-			<div class="copyright">Copyright &copy; 2018 | Developed by <span>Michelle James</span> | Designed by <a href="http://www.whitneyoni.com/" target="_blank" class="credit">Whitney Oni</a></div>
+			<div class="copyright">Copyright &copy; 2021 | Developed by <span>Michelle Graham</span> | Designed by <a href="http://www.whitneyoni.com/" target="_blank" class="credit">Whitney Oni</a></div>
 		</footer>
 
 	
