--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta charset="utf-8" />
+		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<title></title>
-		<meta name="description" content="">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<!-- <link rel="stylesheet" href="dist/css/reset.css">
 		<link rel="stylesheet" href="dist/css/main.css"> -->
-		<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i" rel="stylesheet">
-		<link rel="stylesheet" href="dist/css/app.css">
+		<link
+			href="https://fonts.googleapis.com/css?family=Poppins:300,400,500"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="dist/css/main.css" />
 	</head>
 	<body>
-
 		<a href="index.html" class="logo-white"></a>
 
 		<div class="header">
@@ -22,7 +27,7 @@
 			<div class="blue-square"></div>
 			<div class="turquoise-square"></div>
 			<div class="hamburger-menu">
-				  <div class="bar"></div>	
+				<div class="bar"></div>
 			</div>
 			<div class="square-name contact-name">&lt; Contact /&gt;</div>
 			<div class="nav">
@@ -58,10 +63,14 @@
 					<span data-hover="Giphy Battle">Giphy Battle</span>
 				</a>
 				<a class="nav-link anim-destination" href="anatomy-slider.html">
-					<span data-hover="Anatomy Slider App">Anatomy Slider App</span>
+					<span data-hover="Anatomy Slider App"
+						>Anatomy Slider App</span
+					>
 				</a>
 				<a class="nav-link anim-destination" href="cheesemonger.html">
-					<span data-hover="Cheesemonger Box">Cheesemonger Box Game</span>
+					<span data-hover="Cheesemonger Box"
+						>Cheesemonger Box Game</span
+					>
 				</a>
 				<a class="nav-link anim-destination" href="mercedes-benz.html">
 					<span data-hover="Mercedes Benz">Mercedes Benz</span>
@@ -72,63 +81,115 @@
 				<a class="nav-link anim-destination" href="red-socks.html">
 					<span data-hover="Red Socks">Red Socks</span>
 				</a>
-				<a class="nav-link anim-destination" href="stranger-things.html">
+				<a
+					class="nav-link anim-destination"
+					href="stranger-things.html"
+				>
 					<span data-hover="Stranger Things">Stranger Things</span>
 				</a>
 				<a class="nav-link anim-destination" href="marta-redesign.html">
 					<span data-hover="MARTA Redesign">MARTA Redesign</span>
 				</a>
-				<a class="nav-link anim-destination" href="furniture-world.html">
+				<a
+					class="nav-link anim-destination"
+					href="furniture-world.html"
+				>
 					<span data-hover="Furniture World">Furniture World</span>
 				</a>
 			</div>
 		</div>
 
 		<div class="square-content contact-content contact-square">
-
-			<h2 class="call-to-action">Have a question or want to work together? Let's make it happen!</h2>
-			<form action="form_to_email.php" method="post" class="contact-form" name="contact-form">
-				<input type="text" name="honeypot">
+			<h2 class="call-to-action">
+				Have a question or want to work together? Let's make it happen!
+			</h2>
+			<form
+				action="form_to_email.php"
+				method="post"
+				class="contact-form"
+				name="contact-form"
+			>
+				<input type="text" name="honeypot" />
 				<div class="name-email">
 					<div class="label name-label">
-	  			        <label for="name">Name</label>
-	  			        <input type="text" id="name" name="user_name" placeholder="Your Name">
-	  			    </div>
-	  			    <div class="label email-label">
-	  			        <label for="mail">E-Mail</label>
-	  			        <input type="email" id="mail" name="user_email" placeholder="Enter E-Mail">
-	  			    </div>
+						<label for="name">Name</label>
+						<input
+							type="text"
+							id="name"
+							name="user_name"
+							placeholder="< Your Name />"
+							required
+						/>
+					</div>
+					<div class="label email-label">
+						<label for="mail">E-Mail</label>
+						<input
+							type="email"
+							id="mail"
+							name="user_email"
+							placeholder="< Enter E-Mail />"
+							required
+						/>
+					</div>
 				</div>
-  			    <div class="label message-label">
-  			        <label for="msg">Message</label>
-  			        <textarea id="msg" name="user_message" placeholder="Your Message"></textarea>
-  			    </div>
-  			    <button class="form-button anim-destination" href="index.html" onclick="clearInputFields();">
-  			    	<span data-hover="Send">Send</span>
-  			    </button>
-  			    <h3 class="thank-you-php">Thank you for reaching out. I'll be in touch soon!</h3>
+				<div class="label message-label">
+					<label for="msg">Message</label>
+					<textarea
+						id="msg"
+						name="user_message"
+						placeholder="< Your Message />"
+						required
+					></textarea>
+				</div>
+				<button
+					class="form-button anim-destination"
+					href="index.html"
+					onclick="clearInputFields();"
+				>
+					<span data-hover="Send">Send</span>
+				</button>
+				<h3 class="thank-you-php">
+					Thank you for reaching out. I'll be in touch soon!
+				</h3>
 			</form>
-
 		</div>
 
 		<footer>
 			<div class="social-media" id="social-media-footer">
-				<a href="http://www.twitter.com/webdevshelly" class="icon"><i class="fab fa-twitter"></i></a>
-				<a href="http://www.instagram.com/webdevshelly" class="icon"><i class="fab fa-instagram"></i></a>
-				<a href="http://www.github.com/michellejames" class="icon"><i class="fab fa-github"></i></a>
-				<a href="https://www.linkedin.com/in/webdevshelly/" class="icon"><i class="fab fa-linkedin"></i></a>
+				<a href="http://www.twitter.com/webdevshelly" class="icon"
+					><i class="fab fa-twitter"></i
+				></a>
+				<a href="http://www.instagram.com/webdevshelly" class="icon"
+					><i class="fab fa-instagram"></i
+				></a>
+				<a href="http://www.github.com/michellejames" class="icon"
+					><i class="fab fa-github"></i
+				></a>
+				<a href="https://www.linkedin.com/in/webdevshelly/" class="icon"
+					><i class="fab fa-linkedin"></i
+				></a>
 			</div>
-			<div class="copyright">Copyright &copy; 2018 | Developed by <span>Michelle James</span> | Designed by <a href="http://www.whitneyoni.com/" target="_blank" class="credit">Whitney Oni</a></div>
+			<div class="copyright">
+				Copyright &copy; 2021 | Developed by
+				<span>Michelle Graham</span> | Designed by
+				<a
+					href="http://www.whitneyoni.com/"
+					target="_blank"
+					class="credit"
+					>Whitney Oni</a
+				>
+			</div>
 		</footer>
 
-	
-		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+		<script
+			defer
+			src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"
+		></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
 		<script src="src/js/contact-form.js"></script>
 		<!-- <script src="dist/js/main.js"></script> -->
 		<script src="src/js/app.js"></script>
-
 	</body>
 </html>
