Updated target="_blank" on links

--- a/contact.html
+++ b/contact.html
@@ -156,16 +156,28 @@
 
 		<footer>
 			<div class="social-media" id="social-media-footer">
-				<a href="http://www.twitter.com/webdevshelly" class="icon"
+				<a
+					href="http://www.twitter.com/webdevshelly"
+					target="_blank"
+					class="icon"
 					><i class="fab fa-twitter"></i
 				></a>
-				<a href="http://www.instagram.com/webdevshelly" class="icon"
+				<a
+					href="http://www.instagram.com/webdevshelly"
+					target="_blank"
+					class="icon"
 					><i class="fab fa-instagram"></i
 				></a>
-				<a href="http://www.github.com/michellejames" class="icon"
+				<a
+					href="http://www.github.com/michellejames"
+					target="_blank"
+					class="icon"
 					><i class="fab fa-github"></i
 				></a>
-				<a href="https://www.linkedin.com/in/webdevshelly/" class="icon"
+				<a
+					href="https://www.linkedin.com/in/webdevshelly/"
+					target="_blank"
+					class="icon"
 					><i class="fab fa-linkedin"></i
 				></a>
 			</div>
