--- a/index.html
+++ b/index.html
@@ -178,18 +178,28 @@
 		<div class="squares">
 			<div class="square-title square1">
 				<div class="social-media" id="social-media-header">
-					<a href="http://www.twitter.com/webdevshelly" class="icon"
+					<a
+						href="http://www.twitter.com/webdevshelly"
+						target="_blank"
+						class="icon"
 						><i class="fab fa-twitter"></i
 					></a>
-					<a href="http://www.instagram.com/webdevshelly" class="icon"
+					<a
+						href="http://www.instagram.com/webdevshelly"
+						target="_blank"
+						class="icon"
 						><i class="fab fa-instagram"></i
 					></a>
-					<a href="http://www.github.com/michellejames" class="icon"
+					<a
+						href="http://www.github.com/michellejames"
+						target="_blank"
+						class="icon"
 						><i class="fab fa-github"></i
 					></a>
 					<a
 						href="https://www.linkedin.com/in/webdevshelly/"
 						class="icon"
+						target="_blank"
 						><i class="fab fa-linkedin"></i
 					></a>
 				</div>
@@ -363,16 +373,28 @@
 
 		<footer>
 			<div class="social-media" id="social-media-footer">
-				<a href="http://www.twitter.com/webdevshelly" class="icon"
+				<a
+					href="http://www.twitter.com/webdevshelly"
+					target="_blank"
+					class="icon"
 					><i class="fab fa-twitter"></i
 				></a>
-				<a href="http://www.instagram.com/webdevshelly" class="icon"
+				<a
+					href="http://www.instagram.com/webdevshelly"
+					target="_blank"
+					class="icon"
 					><i class="fab fa-instagram"></i
 				></a>
-				<a href="http://www.github.com/michellejames" class="icon"
+				<a
+					href="http://www.github.com/michellejames"
+					target="_blank"
+					class="icon"
 					><i class="fab fa-github"></i
 				></a>
-				<a href="https://www.linkedin.com/in/webdevshelly/" class="icon"
+				<a
+					href="https://www.linkedin.com/in/webdevshelly/"
+					target="_blank"
+					class="icon"
 					><i class="fab fa-linkedin"></i
 				></a>
 			</div>
