--- a/giphy-battle.html
+++ b/giphy-battle.html
@@ -1,20 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta charset="utf-8" />
+		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<title></title>
-		<meta name="description" content="">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<!-- <link rel="stylesheet" href="dist/css/reset.css">
 		<link rel="stylesheet" href="dist/css/main.css"> -->
-		<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i" rel="stylesheet">
-		<link rel="stylesheet" href="dist/css/main.css">
+		<link
+			href="https://fonts.googleapis.com/css?family=Poppins:300,400,500"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="dist/css/main.css" />
 	</head>
 	<body>
-
 		<a href="index.html" class="logo-white"></a>
 
 		<div class="header">
@@ -22,7 +27,7 @@
 			<div class="blue-square"></div>
 			<div class="turquoise-square"></div>
 			<div class="hamburger-menu">
-				  <div class="bar"></div>	
+				<div class="bar"></div>
 			</div>
 			<div class="portfolio-piece-name">&lt; Giphy Battle App /&gt;</div>
 			<div class="nav">
@@ -58,10 +63,14 @@
 					<span data-hover="Giphy Battle">Giphy Battle</span>
 				</a>
 				<a class="nav-link anim-destination" href="anatomy-slider.html">
-					<span data-hover="Anatomy Slider App">Anatomy Slider App</span>
+					<span data-hover="Anatomy Slider App"
+						>Anatomy Slider App</span
+					>
 				</a>
 				<a class="nav-link anim-destination" href="cheesemonger.html">
-					<span data-hover="Cheesemonger Box">Cheesemonger Box Game</span>
+					<span data-hover="Cheesemonger Box"
+						>Cheesemonger Box Game</span
+					>
 				</a>
 				<a class="nav-link anim-destination" href="mercedes-benz.html">
 					<span data-hover="Mercedes Benz">Mercedes Benz</span>
@@ -72,13 +81,19 @@
 				<a class="nav-link anim-destination" href="red-socks.html">
 					<span data-hover="Red Socks">Red Socks</span>
 				</a>
-				<a class="nav-link anim-destination" href="stranger-things.html">
+				<a
+					class="nav-link anim-destination"
+					href="stranger-things.html"
+				>
 					<span data-hover="Stranger Things">Stranger Things</span>
 				</a>
 				<a class="nav-link anim-destination" href="marta-redesign.html">
 					<span data-hover="MARTA Redesign">MARTA Redesign</span>
 				</a>
-				<a class="nav-link anim-destination" href="furniture-world.html">
+				<a
+					class="nav-link anim-destination"
+					href="furniture-world.html"
+				>
 					<span data-hover="Furniture World">Furniture World</span>
 				</a>
 			</div>
@@ -94,7 +109,13 @@
 				<div class="overlay-text">
 					<div class="text">
 						<h2 class="text-title">Giphy Battle App</h2>
-						<p class="text-description">A fun web application, built with the Vue.js command-line-interface. The app is connected to the GIPHY API and allows the users to search for GIPHYS based on the specific hashtag which is updated every two minutes.</p>
+						<p class="text-description">
+							A fun web application, built with the Vue.js
+							command-line-interface. The app is connected to the
+							GIPHY API and allows the users to search for GIPHYS
+							based on the specific hashtag which is updated every
+							two minutes.
+						</p>
 						<div class="text-technology">
 							<h2>Technology used:</h2>
 							<ul class="technology-array">
@@ -103,7 +124,12 @@
 								<li>Materialize</li>
 							</ul>
 						</div>
-						<a class="link text-link anim-destination" target="_blank" href="http://www.webdevshelly.com/projects/giphy-battle"><span data-hover="Let's go!">Visit Site</span></a>
+						<a
+							class="link text-link anim-destination"
+							target="_blank"
+							href="http://www.webdevshelly.com/projects/giphy-battle"
+							><span data-hover="Let's go!">Visit Site</span></a
+						>
 					</div>
 				</div>
 			</div>
@@ -111,20 +137,50 @@
 
 		<footer>
 			<div class="social-media" id="social-media-footer">
-				<a href="http://www.twitter.com/webdevshelly" class="icon"><i class="fab fa-twitter"></i></a>
-				<a href="http://www.instagram.com/webdevshelly" class="icon"><i class="fab fa-instagram"></i></a>
-				<a href="http://www.github.com/michellejames" class="icon"><i class="fab fa-github"></i></a>
-				<a href="https://www.linkedin.com/in/webdevshelly/" class="icon"><i class="fab fa-linkedin"></i></a>
+				<a
+					href="http://www.twitter.com/webdevshelly"
+					target="_blank"
+					class="icon"
+					><i class="fab fa-twitter"></i
+				></a>
+				<a
+					href="http://www.instagram.com/webdevshelly"
+					target="_blank"
+					class="icon"
+					><i class="fab fa-instagram"></i
+				></a>
+				<a
+					href="http://www.github.com/michellejames"
+					target="_blank"
+					class="icon"
+					><i class="fab fa-github"></i
+				></a>
+				<a
+					href="https://www.linkedin.com/in/webdevshelly/"
+					target="_blank"
+					class="icon"
+					><i class="fab fa-linkedin"></i
+				></a>
 			</div>
-			<div class="copyright">Copyright &copy; 2021 | Developed by <span>Michelle Graham</span> | Designed by <a href="http://www.whitneyoni.com/" target="_blank" class="credit">Whitney Oni</a></div>
+			<div class="copyright">
+				Copyright &copy; 2021 | Developed by
+				<span>Michelle Graham</span> | Designed by
+				<a
+					href="http://www.whitneyoni.com/"
+					target="_blank"
+					class="credit"
+					>Whitney Oni</a
+				>
+			</div>
 		</footer>
 
-	
-		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+		<script
+			defer
+			src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"
+		></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
 		<!-- <script src="dist/js/main.js"></script> -->
 		<script src="src/js/app.js"></script>
-
 	</body>
 </html>
