Uploaded new resume and updated About Me section

--- a/about.html
+++ b/about.html
@@ -113,9 +113,9 @@
 				</p>
 
 				<p>
-					Now I’m living it up in the bustling city of
-					<span>Atlanta</span>, GA home to some of the greatest music
-					and culinary delights the USA has to offer!
+					Now I’m living in the booming city of
+					<span>Charlotte</span>, NC home to virtually most US banks
+					and the famous NASCAR!
 				</p>
 
 				<p>
